# projeto_final_ml

./: Dockerfile  README.md  app.py  controller.py  index.html  modelo.py  modelos.pkl  pyproject.toml  requirements.txt  styles.css  teste.ipynb
